[tool.poetry]
name = "easyflake"
version = "0.0.6"
description = "EasyFlake is a Python package for generating 64-bit IDs similar to Snowflake or Sonyflake."
authors = ["Takeru Furuse <tsuperis@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/tsuperis/easyflake"
packages = [{include = "easyflake"}]
keywords = ["snowflake", "sonyflake", "easyflake"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities"
]

[tool.poetry.scripts]
easyflake-cli = "easyflake.__main__:cli"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
grpcio = {version = "^1.51.3", optional = true}
redis = {version = "^4.5.1", optional = true}
python-daemon = {version = "^2.3.2", optional = true}
click = "^8.1.3"

[tool.poetry.group.test.dependencies]
freezegun = "^1.2.2"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
grpcio-testing = "^1.51.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
mypy = "^1.0.1"
isort = "^5.12.0"
black = "^23.1.0"
grpcio-tools = "^1.51.3"

[tool.poetry.extras]
all = ["redis", "grpcio", "python-daemon"]
grpc = ["grpcio", "python-daemon"]

[tool.black]
target-version = ['py38', 'py39', 'py310', 'py311']
extend-exclude = '''
/(
    \.pytest_cache
    | easyflake\/grpc\/protobuf
)/
'''

[tool.isort]
profile = "black"
extend_skip_glob = ["easyflake/grpc/protobuf/*"]

[tool.mypy]
ignore_missing_imports = true
show_error_context = true
pretty = true
exclude = [
    ".pytest_cache",
    "easyflake/grpc/protobuf"
]

[[tool.mypy.overrides]]
module = [
    "google.protobuf"
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.2"]
build-backend = "poetry.core.masonry.api"
