[tool.poetry]
name = "easyflake"
version = "0.1.0"
description = "EasyFlake is a Python package for generating 64-bit IDs similar to Snowflake or Sonyflake."
authors = ["Takeru Furuse <tsuperis@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/tsuperis/easyflake"
packages = [{include = "easyflake"}]
keywords = ["snowflake", "sonyflake", "easyflake"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities"
]

[tool.poetry.scripts]
easyflake-cli = "easyflake.__main__:cli"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
click = "^8.1.3"
python-daemon = {version = "^2.3.2", markers = "sys_platform == 'linux' or sys_platform == 'darwin'"}
grpcio = "^1.51.3"
grpcio-health-checking = "^1.51.3"
lockfile = "^0.12.2"

[tool.poetry.group.dev.dependencies]
grpcio-tools = "^1.51.3"
pre-commit = "^3.1.1"
tox = "^4.4.6"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
pytest-asyncio = "^0.20.3"

[tool.poetry.group.linter.dependencies]
flake8 = "6.0.0"
mypy = "^1.0.1"
isort = "^5.12.0"
black = "^23.1.0"
flake8-print = "^5.0.0"

[tool.black]
target-version = ['py38', 'py39', 'py310', 'py311']
line-length = 100
extend-exclude = '''
/(
    \.pytest_cache
    | easyflake\/grpc
)/
'''

[tool.isort]
profile = "black"
extend_skip_glob = ["easyflake/grpc/*"]

[tool.mypy]
ignore_missing_imports = true
show_error_context = true
pretty = true
exclude = [
    ".pytest_cache",
    "easyflake/grpc"
]

[[tool.mypy.overrides]]
module = [
    "google.protobuf"
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.2,<2"]
build-backend = "poetry.core.masonry.api"
